pastey-test-suite/tests/ui/none-group-extra-token.stderr
error: unexpected token
 --> tests/ui/none-group-extra-token.rs:9:6
  |
9 | m!(a > b);
  |      ^
