pastey-test-suite/tests/ui/none-group-extra-token.rs
use pastey::paste;

macro_rules! m {
    ($e:expr) => {
        paste! { fn [< $e foo >]() {} }
    };
}

m!(a > b);

fn main() {}
